<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoLMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_in_game">InGameActivity</string>
    <string name="title">LoL Master</string>
    <string name="summoner_name_hint">Enter summoner name</string>
    <string name="search_game">Search Game</string>
    <string name="out_of_game">Champion Info</string>
    <string name="personal_analysis">Match History</string>
    <string name="selectionHelp">Selection help</string>
    
    <string name="title_activity_out_of_game">Champions List</string>
    <string name="title_activity_champion_page">Champion Page</string>
    <string name="title_activity_personal_analysis">Match History</string>
    
    <string name="banner_desc">Champion Banner</string>
    
    <string name="tips">Error when trying to display the tips.</string>
    <string name="ally_tips">Tips when playing with</string>
    <string name="enemy_tips">Tips when playing against</string>
    
    <string name="passive_title">Error when trying to display the passive title.</string>
    <string name="passive">Error when trying to display the passive.</string>
    <string name="q_spell_title">Error when trying to display the q-spell title.</string>
    <string name="q_spell">Error when trying to display the q-spell.</string>
    <string name="w_spell_title">Error when trying to display the w-spell title.</string>
    <string name="w_spell">Error when trying to display the w-spell.</string>
    <string name="e_spell_title">Error when trying to display the e-spell title.</string>
    <string name="e_spell">Error when trying to display the e-spell.</string>
    <string name="r_spell_title">Error when trying to display the r-spell title.</string>
    <string name="r_spell">Error when trying to display the r-spell.</string>
    
    <string name="lore">Error when trying to display the lore.</string>
    
    <string name="popup_title">Please enter the summoner name and region</string>
    <string name="popup_search_button">Search</string>
    <string name="popup_cancel_button">Cancel</string>
    <string name="popup_summoner_name_hint">Summoner name</string>
    <string name="error_no_summoner_name">You need to enter the summoner name.</string>
       
    
    <string name="player_name">Name</string>
    <string name="player_champion">Champion</string>
    <string name="player_rank">Rank</string>
    <string name="player_tier">Tier</string>
    <string name="player_spell">Spell</string>
    <string name="player_normal_win">Normal wins</string>
    <string name="player_ranked_win">Ranked wins</string>
    <string name="player_mastery">Masteries</string>
    
    <string name="runes">Runes</string>

    <string name="loading">Loading&#8230;</string>
    
    <string name="match_history_champion_icon_description">Champion icon of this match</string>
    <string name="match_history_spell_1_description">Icon of the first spell of this match</string>
    <string name="match_history_spell_2_description">Icon of the second spell of this match</string>
    <string name="match_history_item_0_description">Icon of the item 0 of this match</string>
    <string name="match_history_item_1_description">Icon of the item 1 of this match</string>
    <string name="match_history_item_2_description">Icon of the item 2 of this match</string>
    <string name="match_history_item_3_description">Icon of the item 3 of this match</string>
    <string name="match_history_item_4_description">Icon of the item 4 of this match</string>
    <string name="match_history_item_5_description">Icon of the item 5 of this match</string>
    <string name="match_history_item_6_description">Icon of the item 6 of this match</string>
    
    <string name="match_history_pop_up_title">Detail of the match</string>    
    
    <string name="statistic_analysis">Statistics</string>    
    <string name="statistic_pop_up_title">Define your statistic analysis</string>    
    <string name="statistic_champion_name_input_label">Champion: </string>
    <string name="statistic_begin_time_input_label">Set begin time: </string>
    <string name="statistic_end_time_input_label">Set end time: </string>
    <string name="statistic_pop_up_analyse_button">Analyse</string>
    <string name="statistic_pop_up_cancle_button">Cancel</string>
    <string name="statistic_analysis_result_title">Statistic Result</string>
    <string name="statistic_analysis_result_close_button">Close</string>

</resources>
