<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/spells_pageview"
    android:background="@drawable/parchment_bg" >
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:padding="5dp" >

        <!-- Passive -->
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/passive_title"
    		android:text="@string/passive_title"
    		android:background="@color/more_transparent_white" />

    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/passive"
    		android:text="@string/passive"
    		android:background="@color/more_transparent_white" />

        <!-- Q-Spell -->
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/q_spell_title"
    		android:text="@string/q_spell_title"
    		android:background="@color/more_transparent_white"
            android:layout_marginTop="5dp" />

    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/q_spell"
    		android:text="@string/q_spell"
    		android:background="@color/more_transparent_white" />

        <!-- W-Spell -->
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/w_spell_title"
    		android:text="@string/w_spell_title"
    		android:background="@color/more_transparent_white"
            android:layout_marginTop="5dp" />
    		
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/w_spell"
    		android:text="@string/w_spell"
    		android:background="@color/more_transparent_white" />

        <!-- E-Spell -->
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/e_spell_title"
    		android:text="@string/e_spell_title"
    		android:background="@color/more_transparent_white"
            android:layout_marginTop="5dp" />
    		
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/e_spell"
    		android:text="@string/e_spell"
    		android:background="@color/more_transparent_white" />

        <!-- R-Spell -->
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/r_spell_title"
    		android:text="@string/r_spell_title"
    		android:background="@color/more_transparent_white"
            android:layout_marginTop="5dp" />
    		
    	<TextView
       		android:layout_width="fill_parent"
       		android:layout_height="fill_parent"
       		android:id="@+id/r_spell"
    		android:text="@string/r_spell"
    		android:background="@color/more_transparent_white" />
    
    </LinearLayout>
    	
</ScrollView>