<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/player_name"
        android:textSize="12sp"
        android:singleLine="true" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/playerChampion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            android:contentDescription="@string/player_champion"
            android:scaleType="fitXY"
            android:layout_gravity="right" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/playerSpell1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/player_spell"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/playerSpell2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:contentDescription="@string/player_spell"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/playerTier"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:contentDescription="@string/player_tier"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/playerDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/player_rank" />
    </LinearLayout>

    <TextView
        android:id="@+id/playerNormalWins"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/player_normal_win" />

    <TextView
        android:id="@+id/playerRankedWins"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/player_ranked_win" />

    <TextView
        android:id="@+id/playerMastery"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/player_mastery" />

    <Button
        android:id="@+id/runeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/runes"
        android:textSize="12sp"
        android:maxLines="1"
        android:maxLength="13"
        android:minHeight="0dp"
        android:padding="0dp"
        android:layout_margin="0dp" />

</LinearLayout>