<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/player_name"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/player_champion"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/player_rank"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_normal_win"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_ranked_win"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_mastery"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/runes"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/allied_team_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/player_name"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/player_champion"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/player_rank"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_normal_win"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_ranked_win"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/player_mastery"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/runes"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/enemy_team_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" >
    </ListView>

</LinearLayout>