<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent_white"
    android:padding="5dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/match_history_champion_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/match_history_champion_icon_description" />
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/match_history_spell_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/match_history_spell_1_description" />

        <ImageView
            android:id="@+id/match_history_spell_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/match_history_spell_2_description" />
    </LinearLayout>

        
	    <TextView
        	android:id="@+id/match_history_result"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_gravity="center_vertical"
        	android:layout_marginLeft="5dp"
        	android:textSize="12sp" />

    	<TextView
        	android:id="@+id/match_history_creation_time"
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_marginLeft="5dp"
        	android:textSize="12sp" />


</LinearLayout>